--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -9,7 +9,8 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 
 # Bundle app source
-COPY ./ /app
+COPY . /app
+RUN ls -la /app/*
 
 EXPOSE 8080
 CMD [ "python", "app.py" ]
