--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "firebase": "^9.22.1",
     "history": "^5.3.0",
     "preact": "^10.13.2",
-    "preact-router": "^4.1.1"
+    "preact-router": "^4.1.1",
+    "topbar": "^2.0.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
