updated build configuration, env variables

--- a/service/.vscode/launch_example.json
+++ b/service/.vscode/launch_example.json
@@ -11,10 +11,7 @@
       "env": {
         "GOOGLE_APPLICATION_CREDENTIALS": "YOUR_KEY_IF_NOT_DEFAULT_CREDENTIALS",
         "GCLOUD_PROJECT": "YOUR_PROJECT",
-        "VERTEX_REGION": "us-central1",
-        "ASSISTANT_CONTEXT": "",
-        "ASSISTANT_EXAMPLE_QUESTION1": "what is the best AI model approach for recognizing liver lesions?",
-        "ASSISTANT_EXAMPLE_ANSWER1": "AI can also be used to predict complications of liver cirrhosis. Marozas et al. used US elastography and blood tests as training data for AI models and discriminated cases with pressure differences between the portal vein and hepatic vein."
+        "VERTEX_REGION": "us-central1"
       }
     }
   ]
